# delamain

./: README.md  main.py  pyproject.toml  tts.py
models/: norman.onnx.json  ryan.onnx.json
modules/: actions.py  tts.py  wakeword.py
voices/: amy.onnx.json
