[project]
name = "delamain"
version = "0.1.0"
description = "Little voice assistant for Linux tasks."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faster-whisper>=1.2.1",
    "numpy>=2.5.1",
    "openwakeword>=0.4.0",
    "piper-tts>=1.4.2",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
    "sounddevice>=0.5.5",
]
